# jsonschema-diff

./: .flake8  .gitignore  Makefile  README.md  api_schema_v1.json  api_schema_v2.json  context.new.schema.json  context.old.schema.json  main.py  main_render_path.py  pyproject.toml  range.new.schema.json  requirements.txt  schema_v1.json  schema_v2.json  test.py  test_demo.py  test_output.py  test_simple.py  test_simple2.py  testcomb.py  tt.py
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/actions/build-docs/: action.yml
.github/workflows/: auto-area-labels.yml  label-sync.yml  release.yml  reusable-test.yml
docs/: Makefile  changelog.md  conf.py  configuration.md  contributing.md  generate_examples.py  index.md  quickstart.md  troubleshooting.md
docs/_static/: custom.css
docs/api/: cli.md  combiner.md  comparator.md  config.md  context_manager.md  diff_finder.md  diff_processor.md  formatter.md  index.md  path_utils.md  render_processor.md
docs/examples/: api_schema_evolution.md  array_items.md  basic_type_change.md  context_display.md  index.md  nested_objects.md  property_operations.md  type_and_format_combination.md  validation_rules.md
docs/source/: conf.py  index.rst
jsonschema_diff/: __init__.py  abstraction.py  cli.py  combine.py  combiner.py  comparator.py  config.py  config_maker.py  context_manager.py  diff_finder.py  diff_processor.py  formatter.py  legend_redner.py  parameter_base.py  parameter_combined.py  parameter_list.py  path_render.py  path_utils.py  property.py  pypi_interface.py  render_processor.py  table_render.py  tool_render.py
jsonschema_diff/color/: __init__.py  abstraction.py  base.py  mono.py
jsonschema_diff/compare/: parameter_base.py  parameter_list.py  property.py
jsonschema_diff/core/: __init__.py  abstraction.py  compare_base.py  config.py  parameter_base.py  parameter_combined.py  property.py
jsonschema_diff/custom_compare/: list.py  range.py  typed_format.py
jsonschema_diff/legend/: legend_render.py
jsonschema_diff/sphinx/: __init__.py  directive.py
jsonschema_diff/tools/: combine.py
source/: conf.py
tests/: __init__.py  test_catalog_stress_example.py  test_cli.py  test_combiner.py  test_comparator.py  test_config.py  test_context_manager.py  test_diff_finder.py  test_diff_processor.py  test_formatter.py  test_path_utils.py  test_render_processor.py  test_table_render.py
tests/core/: test_property.py
(+56 files in other folders)
