[build-system]
requires = ["setuptools>=61.0", "wheel", "rich"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonschema-diff"
dynamic = ["version"]
description = "A library for comparing JSON schemas and displaying differences"
authors = [
    {name = "Miskler", email = "mail@miskler.ru"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["json", "schema", "diff", "comparison"]
dependencies = [
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/jsonschema-diff"
Repository = "https://github.com/yourusername/jsonschema-diff"
Issues = "https://github.com/yourusername/jsonschema-diff/issues"

[project.scripts]
jsonschema-diff = "jsonschema_diff.cli:main"

[tool.setuptools.dynamic]
version = {attr = "jsonschema_diff.__version__"}

[tool.setuptools.packages.find]
include = ["jsonschema_diff*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=jsonschema_diff --cov-report=term-missing --cov-report=html"
